# compprog-pygame

./: .gitignore  README.md  USER_FACING_STRINGS_REPORT.md  USER_FACING_STRINGS_REPORT_v2.md  _analyze_perf.py  _last_sample.json  _test_ui.py  perf_sweep_quick.csv  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build-native.yml
assets/: icon.icns
assets/audio/music/: README.md
docs/: HEX_COLONY_ARCHITECTURE.md  PERF_AUTOTUNE.md
src/compprog_pygame/: __main__.py  audio.py  board.py  game.py  game_registry.py  home_screen.py  menu.py  settings.py  tetrominoes.py
src/compprog_pygame/games/: __init__.py
src/compprog_pygame/games/hex_colony/: __init__.py  ancient_threat.py  awakening_cutscene.py  blueprints.py  buildings.py  camera.py  clanker_monitor.py  clankers.py  colony.py  combat.py  cutscene.py  factions.py  game.py  generate_sprites.py  hex_grid.py  logistics_monitor.py  menu.py  notifications.py  overlay.py  params.py  people.py  perf_autotune.py  perf_monitor.py  procgen.py  render_buildings.py  render_overlays.py  render_terrain.py  render_utils.py  renderer.py  resource_icons.py  resources.py  rival_colony.py  rocket_launch_cutscene.py  settings.py  sprites.py  strings.py  supply_chain.py  tech_tree.py  ui.py  ui_advanced_stats.py  (+23 more)
src/compprog_pygame/games/physics_tetris/: __init__.py  board.py  difficulty_menu.py  game.py  tetrominoes.py
tests/: test_settings.py
tools/: build.ps1  build_cross.py  build_native.py  generate_cutscene_sprites.py  generate_icon.py  generate_menu_logo.py  perf_sweep.py  perf_train.py
